--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ html, body,
 .full-height {
     height: 100%;
 }
+
 .row-md-1 {
    height: 8.3%;
 }
@@ -13,8 +14,18 @@ html, body,
 	height: 66.6%;
 }
 
-
-.cell {
+.reading-area {
   height: 100%;
   overflow: scroll;;   
+}
+
+
+/* style for panel */
+.left-panel{
+	background-color: #424242;
+	color: white;
+}
+
+.middle-panel{
+	background-color: #F5F5F5;
 }
