--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@ html, body,
 .row-md-1 {
    height: 8.3%;
 }
+
+.row-2{
+	height: 16.67%;
+}
+
 .row-md-4 {
 	height: 33.3%;
 }
@@ -14,9 +19,15 @@ html, body,
 	height: 66.6%;
 }
 
+.row-10{
+	height: 83.33%;
+}
+
+
 .reading-area {
   height: 100%;
-  overflow: scroll;;   
+  overflow: scroll;  
+  overflow-x: hidden; 
 }
 
 
@@ -24,8 +35,13 @@ html, body,
 .left-panel{
 	background-color: #424242;
 	color: white;
+	overflow: scroll;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: bold;
+	overflow-x: hidden;
 }
 
-.middle-panel{
+.chat-log-panel{
 	background-color: #F5F5F5;
+	font-family: 'Roboto Slab', serif;
 }
