--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,12 @@ html, body,
 
 
 .reading-area {
-  height: 100%;
   overflow: scroll;  
   overflow-x: hidden; 
+}
+
+.text-area {
+	width:100%;
 }
 
 
@@ -36,12 +39,16 @@ html, body,
 	background-color: #424242;
 	color: white;
 	overflow: scroll;
-	font-family: 'Open Sans', sans-serif;
-	font-weight: bold;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 500;
 	overflow-x: hidden;
+}
+
+.left-panel h3{
+	font-weight: 700;
 }
 
 .chat-log-panel{
 	background-color: #F5F5F5;
-	font-family: 'Roboto Slab', serif;
+	font-family: 'Open Sans', sans-serif;
 }
