--- a/Mainscreen_Workchat/css/cs300custom.css
+++ b/Mainscreen_Workchat/css/cs300custom.css
@@ -15,3 +15,19 @@
 	color: #999999;
 }
 
+.caret{
+	 text-align: right;
+}
+
+.group-item{
+	font-weight: 700;/*bold*/
+}
+
+.people-item{
+	font-weight: 700;/*bold*/
+}
+
+li .toggledOnline{
+	color: green;
+  font-size: 20px;
+}
